[gd_scene load_steps=3 format=3 uid="uid://c1w34qdaw0bhv"]

[ext_resource type="Script" path="res://scripts/menu/MainMenuManager.gd" id="1_d85wn"]
[ext_resource type="PackedScene" uid="uid://bicer5hvlabr8" path="res://prefabs/main_menu_custom.tscn" id="3_520ah"]

[node name="main_menu_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuManager" type="Node" parent="." node_paths=PackedStringArray("main_menu")]
script = ExtResource("1_d85wn")
main_menu = NodePath("../MainMenu")
initial_fade_in_speed = 2.0

[node name="MainMenu" parent="." instance=ExtResource("3_520ah")]
layout_mode = 1

[connection signal="start_game_pressed" from="MainMenu" to="MainMenuManager" method="_on_main_menu_start_game_pressed"]
